build with cmake

--- a/PCB/CMakeLists.txt
+++ b/PCB/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PCB)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(PCB main.cpp heap.cpp heap.h)
+add_executable(PCB src/main.cpp src/heap.cpp include/heap.h src/process.cpp include/process.h)
